--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
@@ -33,6 +34,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
+    "jquery": "^3.6.1",
     "postcss": "^8.4.17",
     "prettier": "2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
