--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/lab": "^5.0.0-alpha.105",
+    "@mui/material": "^5.10.11",
+    "@mui/x-date-pickers": "^5.0.5",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.4.0",
     "@trpc/client": "^9.27.4",
@@ -17,6 +23,9 @@
     "@trpc/react": "^9.27.4",
     "@trpc/server": "^9.27.4",
     "argon2": "^0.30.1",
+    "date-fns": "^2.29.3",
+    "dayjs": "^1.11.6",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "next-auth": "~4.10.3",
     "react": "18.2.0",
