--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "cypress": "cypress open",
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
@@ -43,6 +44,7 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.12",
+    "cypress": "^10.11.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "jquery": "^3.6.1",
