--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "superjson": "^1.10.0",
     "talkjs": "^0.15.5",
     "zod": "^3.18.0"
