--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment-timezone": "^0.5.38",
     "next": "12.3.1",
     "next-auth": "~4.10.3",
+    "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
