--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-calendar-api": "^2.1.0",
     "react-query": "^3.39.2",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
@@ -48,7 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.12",
-    "cypress": "^10.11.0",
+    "cypress": "^11.1.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
     "jquery": "^3.6.1",
