--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "next": "12.3.1",
     "next-auth": "~4.10.3",
     "nextjs-cors": "^2.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^17.0.2",
+    "react-chat-engine": "^1.8.13",
+    "react-dom": "^17.0.2",
     "react-google-calendar-api": "^2.1.0",
     "react-query": "^3.39.2",
     "socket.io": "^4.5.3",
